data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1308.wast
;; 9. **Test Branch to Non-existent Label in If Block**:    Intentionally include a branch within an `if` block pointing to an non-existent or invalid label. Monitor the system's handling of such erroneous situations to catch incorrect resolution attempts leading to undefined behavior.

(assert_invalid
  (module
    (func $branch-to-nonexistent-label
      (if (result i32) (i32.const 1)
        (then (br 1))
        (else (i32.const 0))
      )
    )
  )
  "invalid branch to non-existent label"
)